@@ -85,7 +85,7 @@
                     </control>
 
                     <control type="group">
-                        <top>-15</top>
+                        <top>15</top>
                         <height>455</height>
                         <left>view_pad</left>
                         <right>view_pad</right>
@@ -177,6 +177,24 @@
                                 <param name="label" value="$LOCALIZE[21899]" />
                                 <param name="label2" value="ListItem.Property(Album_Label)" />
                             </include>
+                        </control>
+                        <control type="image">
+                            <top>60</top>
+                            <right>0</right>
+                            <width>360</width>
+                            <height>360</height>
+                            <aspectratio>keep</aspectratio>
+                            <texture background="true">$INFO[Window(Home).Property(SkinHelper.ListItem.Art.Discart)]</texture>
+                            <visible>!String.IsEmpty(Window(Home).Property(SkinHelper.ListItem.Art.Discart)) + [String.IsEqual(ListItem.DBType,album) | String.IsEqual(ListItem.DBType,song)]</visible>
+                        </control>
+                        <control type="image">
+                            <top>60</top>
+                            <right>0</right>
+                            <width>360</width>
+                            <height>360</height>
+                            <aspectratio>keep</aspectratio>
+                            <texture background="true">$VAR[Image_ClearLogo]</texture>
+                            <visible>String.IsEmpty(Window(Home).Property(SkinHelper.ListItem.Art.Discart)) | ![String.IsEqual(ListItem.DBType,album) | String.IsEqual(ListItem.DBType,song)]</visible>
                         </control>
                     </control>
                 </control>
