@@ -4,6 +4,7 @@ Add option to disable videolyrics Skin Settings > Video / Music OSD > Video Lyri
 Fix pvr timer and record icons
 Add option to disable genre names
 Fix some music info spacing
+Add discart via skin helper to musicinfo
 
 [B]0.9.16[/B]
 LEIA - add "see more" widget item
